--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html>
-  <head>
-    My Portfolio
-  </head>
+<!doctype html>
+<html lang ='en'>
+<head>
+  <title>My Portfolio</title>
+</head>
+
+<body>
+  <a href = "zekelong.github.io/project1">First Project</a>  
+</body>
 
 </html>
