--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <a href = "zekelong.github.io/project1">First Project</a>  
+  <a href = "zekelong.github.io/Project1">First Project</a>  
 </body>
 
 </html>
