--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>My Portfolio</h1>
   
-  <a href = "zekelong.github.io/GUS_PHP_calendar">PHP/jQuery/Ajax code for social website interactive calendar</a></a>  
+  <a href = "github.com/zekelong/GUS_PHP_calendar">PHP/jQuery/Ajax code for social website interactive calendar</a></a>  
 </body>
 
 </html>
