--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <body>
   <h1>My Portfolio</h1>
   
-  <a href = "https://github.com/zekelong/GUS_PHP_calendar">PHP, jQuery, Ajax, and SQL code for social website interactive calendar</a></a>  
+  <a href = "https://github.com/zekelong/PathFinder2dAstar">AI pathfinder program written in C++</a>
+  <a href = "https://github.com/zekelong/SemanticAnalyzerMiniCpp">Semantic analyzer for beginner C++ programs</a>
+  <a href = "https://github.com/zekelong/TimeAccountingAndReportingSystem">
+    My contributions to Idaho Dept. of Health and Welfare time-sheet web app</a> (C#, .NET, SQL, jQuery, Ajax)
+  <a href = "https://github.com/zekelong/GUS_PHP_calendar">
+     My interactive calendar for a social website for groups</a> (PHP, SQL, jQuery, Ajax)  
 </body>
 
 </html>
