--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
   <h1>My Portfolio</h1>
   
-  <a href = "https://github.com/zekelong/PathFinder2dAstar">AI pathfinder program written in C++</a><br>
-  <a href = "https://github.com/zekelong/SemanticAnalyzerMiniCpp">Semantic analyzer for beginner C++ programs</a><br>
+  <a href = "https://github.com/zekelong/PathFinder2dAstar">AI pathfinder program</a> (C++)<br>
+  <a href = "https://github.com/zekelong/SemanticAnalyzerMiniCpp">
+    Semantic analyzer for beginner C++ programs</a> (Flex, Bison, C)<br>
   <a href = "https://github.com/zekelong/TimeAccountingAndReportingSystem">
     My contributions to Idaho Dept. of Health and Welfare time-sheet web app</a> (C#, .NET, SQL, jQuery, Ajax)<br>
   <a href = "https://github.com/zekelong/GUS_PHP_calendar">
