--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!doctype html>
 <html lang ='en'>
 <head>
-  <title>My Portfolio</title>
+  <title>Zeke's Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="portfolio_styles.css">  
 </head>
 
 <body>
-  <h1>My Portfolio</h1>
-  
-  <a href = "https://github.com/zekelong/PathFinder2dAstar">AI pathfinder program</a> (C++)<br>
-  <a href = "https://github.com/zekelong/SemanticAnalyzerMiniCpp">
-    Semantic analyzer for beginner C++ programs</a> (Flex, Bison, C)<br>
-  <a href = "https://github.com/zekelong/TimeAccountingAndReportingSystem">
-    My contributions to Idaho Dept. of Health and Welfare time-sheet web app</a> (C#, .NET, SQL, jQuery, Ajax)<br>
-  <a href = "https://github.com/zekelong/GUS_PHP_calendar">
-     My interactive calendar for a social website for groups</a> (PHP, SQL, jQuery, Ajax) <br> 
+  <div class="topHeader">
+    <h1>Steve "Zeke" Long</h1>
+
+  </div>
+
+  <div class="leftMargin"></div>
+  <div class="content">
+    <h3><u>My Projects</u></h3>
+    <ul>
+      <li><a href="https://github.com/zekelong/PathFinder2dAstar">
+        AI pathfinder program</a> (C++)</li>
+      <li>
+        <a href="https://github.com/zekelong/SemanticAnalyzerMiniCpp">
+        Semantic analyzer for beginner C++ programs</a> (Flex, Bison, C)</li>
+      <li>
+        <a href="https://github.com/zekelong/TimeAccountingAndReportingSystem">
+        My contributions to Idaho Dept. of Health and Welfare time-sheet 
+        web app</a> (C#, .NET, SQL, jQuery, Ajax)</li>
+      <li>
+        <a href = "https://github.com/zekelong/GUS_PHP_calendar">
+        My interactive calendar for a social website for groups</a> 
+        (PHP, SQL, jQuery, Ajax)</li>
+    </ul> 
+
+  </div>
+
 </body>
 
 </html>
